# ByteBoard

./: .gitignore  README.md  db.sqlite3  gemini.txt  index.html  main.py  manage.py  pyproject.toml  requirements_dev.txt
.github/workflows/: run_test_suite_workflow.yml
categories/: admin.py  forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/tests/: test_category_listing.py  test_category_model.py  test_topic_creation_with_category.py  test_topics_by_category.py  test_ui_ux.py
forum/: admin.py  apps.py  decorators.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_post_updated_at_alter_post_created_by.py  0003_topic_is_sticky.py  0004_profile.py  0005_alter_profile_timezone.py  0006_topic_category_alter_profile_avatar.py  0007_post_tags.py
forum/static/forum/: style.css
forum/templates/: base.html
forum/tests/: test_form_validation.py  test_forum_integration.py  test_post_form.py  test_post_model.py  test_post_views.py  test_profile_avatar.py  test_profile_display.py  test_profile_editing.py  test_profile_model.py  test_profile_permissions.py  test_profile_signals.py  test_responsive_design.py  test_topic_form.py  test_topic_model.py  test_topic_views.py
forum_project/: settings.py  urls.py
tagging/: admin.py  models.py  urls.py  views.py
tagging/migrations/: 0001_initial.py
tagging/tests/: test_post_tag_relationship.py  test_tag_integration.py  test_tag_model.py  test_tag_slug.py  test_ui_ux.py
templates/registration/: login.html  signup.html
(+16 files in other folders)
