[project]
name = "myforum-project"
version = "0.1.0"
description = "A forum application build with Python & Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
